- fix categorie boxes spacing

--- a/public/assets/sass/health.sass
+++ b/public/assets/sass/health.sass
@@ -47,6 +47,8 @@
 
     .headline
       font-weight: bold
+      display: flex
+      flex-direction: column
     .cta
       font-weight: bold
       font-size: 12px
